# corva-settings

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: deleting-keys.md  rollback-and-version-history.md  settings-hierarchy.md
src/corva_settings/: __init__.py  manifest.py  merge.py  models.py  repository.py  resolver.py  service.py
tests/: test_service.py
tests/integration/: test_persistence.py
