[project]
name = "corva-settings"
version = "0.1.0"
description = "Reusable Corva settings service with scoped resolution and history"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "corva-sdk>=2.1.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
