[project]
name = "corva-settings"
version = "0.2.0"
description = "Reusable Corva settings service with scoped resolution and history"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "corva-sdk>=2.1.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.12.0",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
markers = [
    "integration: live tests that hit Corva APIs and datasets",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty.environment]
python-version = "3.13"
root = ["src", "."]
